terraform/minikube/modules/postgres/istio.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: "reactory-postgres-gateway"
  namespace: reactory
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 5432
      name: postgres
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reactory-postgres-gateway
  namespace: reactory
spec:
  hosts:
  - "*"
  gateways:
  - reactory-postgres-gateway
  tcp:
  - match:
    - port: 5432
    route:
    - destination:
        host: reactory-postgres
        port:
          number: 5432
